# easy-s3-multipart

./: README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
easy-s3-multipart/: __init__.py  config.py  exceptions.py  handler.py
easy_s3_multipart/: __init__.py  config.py  exceptions.py  handler.py  models.py
tests/: test_exceptions.py  test_handler.py  test_models.py
